[package]
name = "dot-manager"
version = "0.2.1"
edition = "2021"
authors = ["WithoutAName <withoutaname@withoutaname.eu>"]
license = "MIT"
description = "CLI Utility for easy dotfile management"
readme = "README.md"
homepage = "https://github.com/WithoutAName25/DotManager"
repository = "https://github.com/WithoutAName25/DotManager"
keywords = ["cli", "dotfiles"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.80"
camino = "1.1.6"
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"