[package]
name = "dot-manager"
version = "0.3.3"
edition = "2021"
authors = ["WithoutAName <withoutaname@withoutaname.eu>"]
license = "MIT"
description = "CLI Utility for easy dotfile management"
readme = "README.md"
homepage = "https://github.com/WithoutAName25/DotManager"
repository = "https://github.com/WithoutAName25/DotManager"
keywords = ["cli", "dotfiles"]
categories = ["command-line-utilities"]

[features]
default = ["completions"]
completions = ["clap_complete"]

[dependencies]
anyhow = "1.0.80"
camino = "1.1.6"
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = { version = "4.5.50", optional = true }
dirs = "6.0.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"

[build-dependencies]
clap = {version = "4.5.1", features = ["derive"]}
clap_complete = "4.5.50"
clap_mangen = "0.2.26"
